se hacen componentes código que se repite

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import { Portafolio } from "../components/Portafolio.jsx";
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Thiare Sáez</title>
 		<link href="/dist/output.css" rel="stylesheet" />
 	</head>
 	<body>
